--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -60,3 +60,8 @@ body
 
 .parent // Lazy Load Placeholder Generator: https://webdesign-master.ru/services/lazy/
 	background-image: url(data:image/gif;base64,R0lGODlhCgAIAIABAN3d3f///yH5BAEAAAEALAAAAAAKAAgAAAINjAOnyJv2oJOrVXrzKQA7)
+.center
+	text-align: center
+footer
+	background: #000
+	color: #ddd
